--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.css": "tailwindcss",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "mman.h": "c"
     }
 }
