server pair 12 and queue tester

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.css": "tailwindcss",
         "unistd.h": "c",
-        "mman.h": "c"
+        "mman.h": "c",
+        "string.h": "c"
     }
 }
